remove --add-exports